--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
         const hasResult = history.some(r => r.student === user.username);
 
         if(hasResult){
-          window.location.href = "result.html";
+          window.location.href = "./result.html";
         } else {
-          window.location.href = "exam.html";
+          window.location.href = "./exam.html";
         }
       }
     });
