--- a/admin.html
+++ b/admin.html
@@ -80,7 +80,7 @@
         <button class="btn secondary" id="clearAll" type="button">Delete All Questions</button>
       </div>
 
-      <p class="note">Notes: Questions are stored in your browser (localStorage). They will persist until you clear them or clear your browser storage.</p>
+     
     </section>
 
     <section class="card">
@@ -209,7 +209,7 @@
   });
 
   elements.gotoExam.addEventListener('click', () => {
-    window.location.href = 'result.html';
+    window.location.href = './result.html';
   });
 
   function clearForm(){
