--- a/exam.html
+++ b/exam.html
@@ -186,7 +186,7 @@
     // stop exam and redirect to result page
     examActive = false;
     clearInterval(timerInterval);
-    window.location.href = 'result.html';
+    window.location.href = './result.html';
   }
 
   function clearAnswers(){
