--- a/result.html
+++ b/result.html
@@ -79,12 +79,10 @@
       historyList.style.display = 'none';
       document.getElementById('clearHistory').style.display = 'none';
       document.getElementById('backAdmin').style.display = 'none'; // only admins see back
-      return;
-    }
-    if (role !== 'student') {
       document.getElementById('retake').style.display = 'none'; 
       return;
     }
+   
     // admin: show full history
     const arr = JSON.parse(localStorage.getItem(historyKey) || '[]');
     historyList.innerHTML = '<h3 style="margin-top:18px">History</h3>';
@@ -126,9 +124,9 @@
   });
 
 
-  if (role !== 'admin') {
-    document.getElementById("retake").style.display = "none";
-  }
+  // if (role !== 'admin') {
+  //   document.getElementById("retake").style.display = "none";
+  // }
   
 
   showResult();
