--- a/create-account.html
+++ b/create-account.html
@@ -70,7 +70,7 @@
       localStorage.setItem("students", JSON.stringify(students));
 
       alert(`Account created! Your Student ID is ${studentId}`);
-      window.location.href = "./login.html";
+      window.location.href = "./index.html";
     });
   </script>
 </body>
