--- a/create-account.html
+++ b/create-account.html
@@ -30,7 +30,7 @@
     </form>
 
     <div class="link">
-      <a href="login.html">Back to Login</a>
+      <a href="./index.html">Back to Login</a>
     </div>
   </div>
 
